--- a/StackOnlyList/StackOnlyList.csproj
+++ b/StackOnlyList/StackOnlyList.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
       <PackageReference Include="NUnit" Version="3.13.2" />
     </ItemGroup>
 
