--- a/StackOnlyList/StackOnlyList.csproj
+++ b/StackOnlyList/StackOnlyList.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
       <PackageReference Include="NUnit" Version="3.13.2" />
     </ItemGroup>
